--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head><title>Techky Blogger</title></head>
-<body bgcolor="white"><font face="times new roman header" size="7" color="blue">
+<body bgcolor="white"><font face="lucida handwriting" size="7" color="blue">
 <center>TECHKY BLOGGER.IN</center></font>
 <img src="G:\DOWNLOADER\IMG_20200122_174035.jpg" width="250 height="250" hspace=30 vspace=30 align="right">
-<font size="4" color="black">
+<font size="3" color="black">
 <p>TECHKY BLOGGER</FONT>,<FONT COLOR="RED"> FOUNDER V.NITHISHWAR</FONT><font size="4" color="black">,This website give you a information about new and current technology news
 and many more tech codes, and hacking news will be continuosly posted on particular webpage
 and we creating a new server for provide a movies and video songs for you free and in many 
@@ -13,21 +13,13 @@ objectives, such as scientific investigation. Technology can be the knowledge of
  machines to allow for operation without detailed knowledge of their workings. Systems applying technology by taking an
  input, changing it according to the system's use, and then producing an outcome are referred to as technology systems or technological systems.
 
-&nbsp;The simplest form of technology is the development and use of basic tools. The prehistoric discovery of how to control fire and the later
- Neolithic Revolution increased the available sources of food, and the invention of the wheel helped humans to travel in and control their
-environment. Developments in historic times, including the printing press, the telephone, and the Internet, have lessened physical
- barriers to communication and allowed humans to interact freely on a global scale.
 
-&nbsp;Technology has many effects. It has helped develop more advanced economies and has allowed the rise of a leisure class. Many
- technological processes produce unwanted by-products known as pollution and deplete natural resources to the detriment of
- Earth's environment. Innovations have always influenced the values of a society and raised new questions in the ethics of technology.
- Examples include the rise of the notion of efficiency in terms of human productivity, and the challenges of bioethics.</p>
 
 <p> <font size="4" color="">follow me on instagram:
 <font size="4" color="red">mr_black_hat_ </font>
 <hr size=10 width=100% color="green">
 <p><font size="6">CONTENTS:</FONT>
-<P> <font size="4" color='orange'>We are sorry, CONTENTS will be available soon..!
+<P> <font size="4" color='orange'>We are sorry, CONTENTS will be available soon..!<br>
 We are sorry, CONTENTS will be available soon..!</font>
 
 
