--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <font size="3" color="black">
 <p>TECHKY BLOGGER</FONT>,<FONT COLOR="RED"> FOUNDER V.NITHISHWAR</FONT><font size="4" color="black">,This website give you a information about new and current technology news
 and many more tech codes, and hacking news will be continuosly posted on particular webpage
-and we creating a new server for provide a movies and video songs for you free and in many 
+and we creating a new server to provide a movies and video songs for you free and in many 
 quality like maximum 1080pHd and minimum 480pHd. available free for you guys and many movie 
 review will posted and new mobile phone and linux updates are availble here. </p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Technology is the sum of techniques, skills, methods, and processes used in the production of goods or services or in the accomplishment of
