--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head><title>Techky Blogger</title></head>
 <body bgcolor="white"><font face="lucida handwriting" size="7" color="blue">
-<center>TECHKY BLOGGER.IN</center></font>
+<center>TECHKY BLOGGER</center></font>
 <img src="G:\DOWNLOADER\IMG_20200122_174035.jpg" width="250 height="250" hspace=30 vspace=30 align="right">
-<font size="3" color="black">
+<font size="2" color="black">
 <p>TECHKY BLOGGER</FONT>,<FONT COLOR="RED"> FOUNDER V.NITHISHWAR</FONT><font size="4" color="black">,This website give you a information about new and current technology news
 and many more tech codes, and hacking news will be continuosly posted on particular webpage
 and we creating a new server to provide a movies and video songs for you free and in many 
